# musicd

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  dist-workspace.toml  docker-compose.host.yml  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: android-debug-apk.yml  docker-publish.yml  musicd-cli-release.yml  version-plan.yml
apps/musicd/: Cargo.toml
apps/musicd-android/: README.md  build.gradle.kts  settings.gradle.kts
apps/musicd-cli/: Cargo.toml
apps/musicd-cli/src/: api.rs  app.rs  config.rs  local_audio.rs  main.rs
apps/musicd/assets/: album_detail.css  home.css  home.js  track_detail.css
apps/musicd/src/: assets.rs  cli.rs  discovery.rs  handlers.rs  ids.rs  main.rs  metrics.rs  types.rs  util.rs
apps/musicd/src/artwork/: mime.rs  mod.rs  musicbrainz.rs  sidecar.rs
apps/musicd/src/db/: groups.rs  library.rs  likes.rs  mod.rs  playback.rs  queue.rs  recommendations.rs  renderers.rs
apps/musicd/src/http/: mod.rs  request.rs  response.rs  router.rs  server.rs  sse.rs
apps/musicd/src/renderer/: android_local.rs  health.rs  mod.rs  upnp.rs
apps/musicd/src/service/: artwork.rs  events.rs  groups.rs  mod.rs  poll.rs  queue.rs  radio.rs  recommendations.rs  renderers.rs  tidal.rs  transport.rs  watcher.rs
apps/musicd/src/views/: album_detail.rs  error.rs  home.rs  json.rs  layout.rs  library.rs  mod.rs  queue.rs  queue_panel.rs  track_detail.rs  welcome.rs
crates/musicd-core/: Cargo.toml
crates/musicd-upnp/: Cargo.toml
docs/: android-api-contract.md  android-app-plan.md  android-local-renderer-plan.md  architecture.md  deferred_changes.md  monitoring-quickstart.md  mvp-plan.md  queue-plan.md  unraid.md  versioning.md
scripts/: compose-local.sh  next_versions.py
(+51 files in other folders)
