[package]
name = "musicd-cli"
edition.workspace = true
license.workspace = true
version = "2.5.0"
repository = "https://github.com/seinzu/musicd"
description = "A CLI for connecting to a musicd instance"
homepage = "https://github.com/seinzu/musicd"

[[bin]]
name = "musicdctl"
path = "src/main.rs"

[dependencies]
anyhow = "1"
crossterm = "0.28"
dirs = "5"
libc = "0.2"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
