[package]
name = "musicd"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
lofty = "0.24"
musicd-core = { path = "../../crates/musicd-core" }
musicd-upnp = { path = "../../crates/musicd-upnp" }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
