[package]
name = "musicd"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
arc-swap = "1.7"
lofty = "0.24"
musicd-core = { path = "../../crates/musicd-core" }
musicd-upnp = { path = "../../crates/musicd-upnp" }
prometheus-client = "0.22"
r2d2 = "0.8"
r2d2_sqlite = "0.31"
rayon = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
